--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <%- include('partials/layout/headerTop') %>
 <link rel="stylesheet" href="css/style.css">
 <%- include('partials/layout/headerBottom') %>
+
 <div class="layout-content relative-parent">
-	<a href="/login">Login</a>
-	<a href="/signup">Signup</a>
+	<p>Index Content</p>
 </div>
 
 <%- include('partials/layout/footer') %>
