--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,14 +7,14 @@
 		<form action="/login" method="post">
 			<h1>Log In</h1>
 			<div class="input-group">
-				<label for="login-name">Username:</label>
-				<input type="text" name="login-name" required autofocus autocomplete="login-name">
+				<label for="username">Username:</label>
+				<input type="text" name="username" required autofocus autocomplete="username">
 			</div>
 			<div class="input-group">
-				<label for="login-password">Password:</label>
-				<input type="password" name="login-password" required autocomplete="login-password">
+				<label for="password">Password:</label>
+				<input type="password" name="password" required autocomplete="password">
 			</div>
-			<button type="submit" name="login-submit-button">Log In</button>
+			<button type="submit" id="login-submit-button">Log In</button>
 		</form>
 	</div>
 </div>
